j--/tests/pass/LogicalOr.java
package pass;

public class LogicalOr {
    public boolean logicalOr(boolean cond_a, boolean cond_b){
        return cond_a || cond_b;
    }
}
