j--/tests/fail/LogicalOr.java
package fail;

public class LogicalOr {
    public static void main(String[] args) {
        boolean b = false || "bad";
    }

}
